overlays/staging/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/chaoLing140/stellarinsure-frontend:staging
